--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="nav-right">
             <button class="search-btn">🔍 Search</button>
             <button class="login-btn" onclick="window.location.href='login.html'">Login</button>
-            <button class="demo-btn">Request Demo</button>
+            <button class="demo-btn" onclick="window.location.href='demo.html'">Request Demo</button>
         </div>
     </nav>
 
@@ -69,8 +69,8 @@
                 <h1>Transform Your Academic Journey</h1>
                 <p>Combine AI-powered automation with personalized guidance to create student-specific conversations proven to increase enrollment and degree completion. Experience support that never sleeps.</p>
                 <div class="hero-buttons">
-                    <button class="primary-btn">Start Free Trial →</button>
-                    <button class="secondary-btn">Watch Demo</button>
+                    <button class="primary-btn" onclick="window.location.href='trial.html'">Start Free Trial →</button>
+                    <button class="secondary-btn" onclick="window.location.href='demo.html'">Watch Demo</button>
                 </div>
             </div>
             <div class="hero-right">
@@ -103,10 +103,10 @@
         <div class="trust-content">
             <p>Trusted by Leading Institutions Worldwide</p>
             <div class="trust-logos">
-                <div class="trust-logo">UNIVERSITY A</div>
-                <div class="trust-logo">COLLEGE B</div>
-                <div class="trust-logo">INSTITUTE C</div>
-                <div class="trust-logo">ACADEMY D</div>
+                <div class="trust-logo">MIU</div>
+                <div class="trust-logo">ST.FATIMA</div>
+                <div class="trust-logo">OXFORD</div>
+                <div class="trust-logo">HARVARD</div>
             </div>
         </div>
     </section>
@@ -118,7 +118,7 @@
                 <div class="ai-subtitle">AI-Powered Student Support</div>
                 <h2>Experience the Power of Machine Learning</h2>
                 <p>From a library of 850+ vetted questions, MashouraX continually improves the quality of answers and stays compliant with evolving regulatory updates. Our advanced AI adapts to each student's unique needs.</p>
-                <button class="primary-btn">Explore AI Features →</button>
+                <button class="primary-btn" onclick="window.location.href='ai-features.html'">Explore AI Features →</button>
             </div>
             <div class="ai-visual">
             </div>
