--- a/login.html
+++ b/login.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - MashouraX</title>
-  <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div class="container">
         <div class="logo">
-            <h1>MashouraX</h1>
+            <h1><a href="index.html">MashouraX</a></h1>
             <p>Virtual Advising Platform</p>
         </div>
 
@@ -47,7 +47,7 @@
             </div>
 
             <div class="signup-link">
-                Don't have an account? <a href="#signup">Sign up</a>
+                Don't have an account? <a href="signup.html">Sign up</a>
             </div>
         </div>
 
