Add new resource pages and enhance navigation

--- a/ai-features.html
+++ b/ai-features.html
@@ -805,6 +805,24 @@
                 </div>
             </li>
             <li class="nav-item">
+                <a href="#solutions">Solutions ▾</a>
+                <div class="dropdown">
+                    <a href="#">Virtual Advising</a>
+                    <a href="#">Student Success</a>
+                    <a href="#">Academic Planning</a>
+                    <a href="#">Career Services</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a href="#features">Features ▾</a>
+                <div class="dropdown">
+                    <a href="#">AI-Powered Support</a>
+                    <a href="#">Analytics Dashboard</a>
+                    <a href="#">24/7 Chat Support</a>
+                    <a href="#">Mobile App</a>
+                </div>
+            </li>
+            <li class="nav-item">
                 <a href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
