--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <li class="nav-item">
                 <a href="#resources">Resources ▾</a>
                 <div class="dropdown">
-                    <a href="#">Case Studies</a>
-                    <a href="#">Documentation</a>
-                    <a href="#">Webinars</a>
-                    <a href="#">Help Center</a>
+                    <a href="case-studies.html">Case Studies</a>
+                    <a href="documentation.html">Documentation</a>
+                    <a href="webinars.html">Webinars</a>
+                    <a href="help-center.html">Help Center</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -290,10 +290,10 @@
             <div class="footer-col">
                 <h4>Resources</h4>
                 <ul class="footer-links">
-                    <li><a href="#">Documentation</a></li>
-                    <li><a href="#">Case Studies</a></li>
-                    <li><a href="#">Webinars</a></li>
-                    <li><a href="#">Help Center</a></li>
+                    <li><a href="documentation.html">Documentation</a></li>
+                    <li><a href="case-studies.html">Case Studies</a></li>
+                    <li><a href="webinars.html">Webinars</a></li>
+                    <li><a href="help-center.html">Help Center</a></li>
                 </ul>
             </div>
             <div class="footer-col">
@@ -310,6 +310,80 @@
             <p>&copy; 2025 MashouraX. All rights reserved. Built with excellence for student success.</p>
         </div>
     </footer>
+    <div class="search-overlay" id="searchOverlay" aria-hidden="true" style="display:none;position:fixed;inset:0;z-index:2000;align-items:center;justify-content:center;background:rgba(0,0,0,0.7);backdrop-filter:blur(6px);">
+        <div class="search-panel" role="dialog" aria-modal="true" aria-labelledby="searchTitle" style="width:min(900px,92vw);background:rgba(0,0,0,0.95);border:1px solid rgba(218,165,32,0.2);border-radius:14px;padding:1rem 1rem 1.2rem;">
+            <div class="search-header" style="display:flex;gap:0.6rem;align-items:center;margin-bottom:0.8rem;">
+                <input id="globalSearchInput" class="search-input" placeholder="Search pages or this page..." style="flex:1;padding:0.9rem 1rem;background:transparent;color:#fff;border:1px solid rgba(218,165,32,0.35);border-radius:10px;outline:none;" />
+                <button class="secondary-btn" id="closeSearchBtn">Close</button>
+            </div>
+            <div class="search-results" id="globalSearchResults" style="max-height:55vh;overflow:auto;display:grid;gap:0.8rem;"></div>
+        </div>
+    </div>
+    <script>
+        (function(){
+            var overlay = document.getElementById('searchOverlay');
+            var input = document.getElementById('globalSearchInput');
+            var results = document.getElementById('globalSearchResults');
+            var openBtn = document.querySelector('.search-btn');
+            var closeBtn = document.getElementById('closeSearchBtn');
+
+            function openSearch(){
+                if(!overlay) return;
+                overlay.style.display = 'flex';
+                overlay.setAttribute('aria-hidden','false');
+                setTimeout(function(){ input && input.focus(); }, 10);
+                renderResults('');
+            }
+            function closeSearch(){
+                overlay.style.display = 'none';
+                overlay.setAttribute('aria-hidden','true');
+            }
+            function renderResults(q){
+                var pages = [
+                    {title:'Case Studies', url:'case-studies.html', tags:['case','studies','trusted','universities']},
+                    {title:'Documentation', url:'documentation.html', tags:['docs','guide','api','setup']},
+                    {title:'Webinars', url:'webinars.html', tags:['events','sessions','talks']},
+                    {title:'Help Center', url:'help-center.html', tags:['help','support','contact']},
+                    {title:'Home', url:'index.html', tags:['home','features','security']}
+                ];
+                q = (q||'').toLowerCase();
+                var items = [];
+                pages.forEach(function(p){
+                    var hay = (p.title+' '+p.tags.join(' ')).toLowerCase();
+                    if(!q || hay.includes(q)){
+                        items.push({html:'<div style="display:flex;align-items:center;justify-content:space-between;gap:1rem;"><div><span style="color:#DAA520;font-size:0.8rem;margin-right:0.5rem;">Page</span>'+p.title+'</div><a class="secondary-btn" href="'+p.url+'">Open</a></div>'});
+                    }
+                });
+                if(q){
+                    var nodes = Array.from(document.querySelectorAll('h1,h2,h3,p,li'));
+                    nodes.forEach(function(n){
+                        var t = (n.textContent||'').trim();
+                        if(t && t.toLowerCase().includes(q)){
+                            items.push({html:'<div style="display:flex;align-items:center;justify-content:space-between;gap:1rem;"><div><span style="color:#DAA520;font-size:0.8rem;margin-right:0.5rem;">This page</span>'+t.substring(0,120)+'</div><button class="secondary-btn" data-scroll="1">View</button></div>', scrollTo: n});
+                        }
+                    });
+                }
+                if(!items.length){
+                    results.innerHTML = '<div style="color:#aaa;">No results. Try keywords like "case", "docs", "webinars", or "help".</div>';
+                } else {
+                    results.innerHTML = items.map(function(it){ return '<div style="padding:0.8rem;background:rgba(255,255,255,0.02);border:1px solid rgba(218,165,32,0.15);border-radius:10px;">'+it.html+'</div>'; }).join('');
+                    var scrollBtns = Array.from(results.querySelectorAll('[data-scroll]'));
+                    var scrollTargets = items.filter(function(i){return i.scrollTo;}).map(function(i){return i.scrollTo;});
+                    scrollBtns.forEach(function(btn, idx){
+                        var target = scrollTargets[idx];
+                        btn && btn.addEventListener('click', function(){ target && target.scrollIntoView({behavior:'smooth', block:'center'}); closeSearch(); });
+                    });
+                }
+            }
+            if(openBtn){ openBtn.addEventListener('click', openSearch); }
+            if(closeBtn){ closeBtn.addEventListener('click', closeSearch); }
+            document.addEventListener('keydown', function(e){
+                if((e.ctrlKey||e.metaKey) && e.key.toLowerCase()==='k'){ e.preventDefault(); openSearch(); }
+                if(e.key==='Escape'){ closeSearch(); }
+            });
+            if(input){ input.addEventListener('input', function(){ renderResults(input.value); }); }
+        })();
+    </script>
 </body>
 </html>solutions">Solutions ▾</a>
                 <div class="dropdown">
