--- a/ai-features.html
+++ b/ai-features.html
@@ -796,21 +796,12 @@
         <div class="logo">MashouraX</div>
         <ul class="nav-center">
             <li class="nav-item">
-                <a href="#resources">Resources ▾</a>
-                <div class="dropdown">
-                    <a href="#">Case Studies</a>
-                    <a href="#">Documentation</a>
-                    <a href="#">Webinars</a>
-                    <a href="#">Help Center</a>
-                </div>
-            </li>
-            <li class="nav-item">
                 <a href="#solutions">Solutions ▾</a>
                 <div class="dropdown">
-                    <a href="#">Virtual Advising</a>
-                    <a href="#">Student Success</a>
-                    <a href="#">Academic Planning</a>
-                    <a href="#">Career Services</a>
+                    <a href="solutions-virtual-advising.html">Virtual Advising</a>
+                    <a href="solutions-student-success.html">Student Success</a>
+                    <a href="solutions-academic-planning.html">Academic Planning</a>
+                    <a href="solutions-career-services.html">Career Services</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -822,6 +813,17 @@
                     <a href="#">Mobile App</a>
                 </div>
             </li>
+            
+            <li class="nav-item">
+                <a href="#resources">Resources ▾</a>
+                <div class="dropdown">
+                    <a href="#">Case Studies</a>
+                    <a href="#">Documentation</a>
+                    <a href="#">Webinars</a>
+                    <a href="#">Help Center</a>
+                </div>
+            </li>
+            
             <li class="nav-item">
                 <a href="#pricing">Pricing</a>
             </li>
