--- a/demo.html
+++ b/demo.html
@@ -28,14 +28,34 @@
     <div class="logo" onclick="window.location.href='index.html'">MashouraX</div>
     <ul class="nav-center">
       <li class="nav-item">
-        <a href="#">Resources ▾</a>
+        <a href="#solutions">Solutions ▾</a>
         <div class="dropdown">
-          <a href="#">Case Studies</a>
-          <a href="#">Documentation</a>
-          <a href="#">Webinars</a>
-          <a href="#">Help Center</a>
+          <a href="#">Virtual Advising</a>
+          <a href="#">Student Success</a>
+          <a href="#">Academic Planning</a>
+          <a href="#">Career Services</a>
         </div>
       </li>
+      <li class="nav-item">
+        <a href="#features">Features ▾</a>
+        <div class="dropdown">
+          <a href="#">AI-Powered Support</a>
+          <a href="#">Analytics Dashboard</a>
+          <a href="#">24/7 Chat Support</a>
+          <a href="#">Mobile App</a>
+        </div>
+      </li> 
+      
+      <li class="nav-item">
+        <a href="#">Resources ▾</a>
+        <div class="dropdown">
+          <a href="case-studies.html">Case Studies</a>
+          <a href="documentation.html">Documentation</a>
+          <a href="webinars.html">Webinars</a>
+          <a href="help-center.html">Help Center</a>
+        </div>
+      </li>
+     
       <li class="nav-item"><a href="#pricing">Pricing</a></li>
       <li class="nav-item"><a href="#security">Security</a></li>
     </ul>
