--- a/webinars.html
+++ b/webinars.html
@@ -38,6 +38,24 @@
                     <a href="help-center.html">Help Center</a>
                 </div>
             </li>
+            <li class="nav-item">
+                <a href="#solutions">Solutions ▾</a>
+                <div class="dropdown">
+                    <a href="solutions-virtual-advising.html">Virtual Advising</a>
+                    <a href="solutions-student-success.html">Student Success</a>
+                    <a href="solutions-academic-planning.html">Academic Planning</a>
+                    <a href="solutions-career-services.html">Career Services</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a href="#features">Features ▾</a>
+                <div class="dropdown">
+                    <a href="#">AI-Powered Support</a>
+                    <a href="#">Analytics Dashboard</a>
+                    <a href="#">24/7 Chat Support</a>
+                    <a href="#">Mobile App</a>
+                </div>
+            </li>
             <li class="nav-item"><a href="index.html#pricing">Pricing</a></li>
             <li class="nav-item"><a href="index.html#security">Security</a></li>
         </ul>
