--- a/case-studies.html
+++ b/case-studies.html
@@ -30,6 +30,25 @@
         <div class="logo" onclick="window.location.href='index.html'">MashouraX</div>
         <ul class="nav-center">
             <li class="nav-item">
+                <a href="#solutions">Solutions ▾</a>
+                <div class="dropdown">
+                    <a href="solutions-virtual-advising.html">Virtual Advising</a>
+                    <a href="solutions-student-success.html">Student Success</a>
+                    <a href="solutions-academic-planning.html">Academic Planning</a>
+                    <a href="solutions-career-services.html">Career Services</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a href="#features">Features ▾</a>
+                <div class="dropdown">
+                    <a href="#">AI-Powered Support</a>
+                    <a href="#">Analytics Dashboard</a>
+                    <a href="#">24/7 Chat Support</a>
+                    <a href="#">Mobile App</a>
+                </div>
+            </li>
+            
+            <li class="nav-item">
                 <a href="#">Resources ▾</a>
                 <div class="dropdown">
                     <a href="case-studies.html">Case Studies</a>
@@ -38,6 +57,7 @@
                     <a href="help-center.html">Help Center</a>
                 </div>
             </li>
+            
             <li class="nav-item"><a href="index.html#pricing">Pricing</a></li>
             <li class="nav-item"><a href="index.html#security">Security</a></li>
         </ul>
