--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="#features">Features ▾</a>
                 <div class="dropdown">
                     <a href="#">AI-Powered Support</a>
-                    <a href="#">Analytics Dashboard</a>
+                    <a href="analytics-dashboard.html">Analytics Dashboard</a>
                     <a href="#">24/7 Chat Support</a>
                     <a href="#">Mobile App</a>
                 </div>
