--- a/ai-features.html
+++ b/ai-features.html
@@ -1130,7 +1130,7 @@
     </script>
 
     <!-- Footer -->
-    <footer>
+        <footer>
         <div class="footer-content">
             <div class="footer-brand">
                 <h3>MashouraX</h3>
@@ -1143,30 +1143,30 @@
                 </div>
             </div>
             <div class="footer-col">
-                <h4>AI Solutions</h4>
+                <h4>Solutions</h4>
                 <ul class="footer-links">
-                    <li><a href="#">Natural Language AI</a></li>
-                    <li><a href="#">Predictive Analytics</a></li>
-                    <li><a href="#">Smart Recommendations</a></li>
-                    <li><a href="#">ML Pipeline</a></li>
+                    <li><a href="solutions-virtual-advising.html">Virtual Advising</a></li>
+                    <li><a href="solutions-student-success.html">Student Success</a></li>
+                    <li><a href="solutions-academic-planning.html">Academic Planning</a></li>
+                    <li><a href="solutions-career-services.html">Career Services</a></li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h4>Resources</h4>
                 <ul class="footer-links">
-                    <li><a href="#">AI Documentation</a></li>
-                    <li><a href="#">Case Studies</a></li>
-                    <li><a href="#">Research Papers</a></li>
-                    <li><a href="#">Help Center</a></li>
+                    <li><a href="documentation.html">Documentation</a></li>
+                    <li><a href="case-studies.html">Case Studies</a></li>
+                    <li><a href="webinars.html">Webinars</a></li>
+                    <li><a href="help-center.html">Help Center</a></li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h4>Company</h4>
                 <ul class="footer-links">
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Careers</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="solutions-career-services.html">Careers</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="privacy.html">Privacy Policy</a></li>
                 </ul>
             </div>
         </div>
