--- a/index.html
+++ b/index.html
@@ -406,5 +406,6 @@
             if(input){ input.addEventListener('input', function(){ renderResults(input.value); }); }
         })();
     </script>
+    <script src="cookies-loader.js"></script>
 </body>
 </html>
