--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- Main Navigation -->
     <nav>
-        <div class="logo">MashouraX</div>
+        <div class="logo"><a href="index.html">MashouraX</a></div>
         <ul class="nav-center">
             <li class="nav-item">
                 <a href="#solutions">Solutions ▾</a>
@@ -406,6 +406,6 @@
             if(input){ input.addEventListener('input', function(){ renderResults(input.value); }); }
         })();
     </script>
-    <script src="cookies-loader.js"></script>
+    <script src="cookies-loader.js"></script> 
 </body>
 </html>
