--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="dropdown">
                     <a href="ai-features.html">AI-Powered Support</a>
                     <a href="analytics-dashboard.html">Analytics Dashboard</a>
-                    <a href="#">24/7 Chat Support</a>
+                    <a href="chat-support.html">24/7 Chat Support</a>
                     <a href="mobile.html">Mobile App</a>
                 </div>
            
