--- a/demo.html
+++ b/demo.html
@@ -150,12 +150,12 @@
             <div class="footer-brand">
                 <h3>MashouraX</h3>
                 <p>Empowering institutions with AI-powered virtual advising to transform student success and drive better outcomes.</p>
-                <div class="social-links">
-                    <a href="#" class="social-link">𝕏</a>
-                    <a href="#" class="social-link">in</a>
-                    <a href="#" class="social-link">f</a>
-                    <a href="#" class="social-link">▶</a>
-                </div>
+               <div class="social-links">
+                    <a href="https://twitter.com" target="_blank" class="social-link" title="Follow us on X">𝕏</a>
+                    <a href="https://linkedin.com" target="_blank" class="social-link" title="Connect on LinkedIn">in</a>
+                    <a href="https://facebook.com" target="_blank" class="social-link" title="Like us on Facebook">f</a>
+                    <a href="https://youtube.com" target="_blank" class="social-link" title="Subscribe on YouTube">▶</a>
+                </div> 
             </div>
             <div class="footer-col">
                 <h4>Solutions</h4>
